<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) Intertech, Inc. - All Rights Reserved
    * Unauthorized copying of this file, via any medium is strictly prohibited
    * Proprietary and confidential
    * Written by Jim White <jwhite@intertech.com>, February 2015
    *
    * Created by jwhite on 1/25/2015.
    */
    -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_find"
        android:orderInCategory="100"
        android:title="@string/menu_find"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_query"
        android:orderInCategory="200"
        android:title="@string/menu_manual_query"
        android:icon="@drawable/note_bw"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove"
        android:orderInCategory="500"
        android:title="@string/menu_remove"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="600"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
